Refactor: css 코드 수정

--- a/todoList/index.html
+++ b/todoList/index.html
@@ -19,7 +19,7 @@
         </div>
         
     </header>
-    <div class="wrapper">
+    <main class="wrapper">
         <section class="list_todo">
             <h1>To Do</h1>
             <ul>
@@ -50,6 +50,6 @@
                 </li>
             </ul>
         </section>
-    </div>
+    </main>
 </body>
 </html>
