--- a/todoList/index.html
+++ b/todoList/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TodoList</title>
+    <link rel="stylesheet" href="/todoList/css/reset.css">
     <link rel="stylesheet" href="/todoList/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,38 +16,38 @@
         <h1>To Do List</h1>
         <div class="search">
             <input type="text" placeholder="할 일을 입력해주세요.">
-            <button class="search_btn">+</button>
+            <button class="search_btn" type="button">+</button>
         </div>
         
     </header>
     <main class="wrapper">
-        <section class="list_todo">
+        <section class="list">
             <h1>To Do</h1>
             <ul>
                 <li>
                     <p>과제하기</p>
-                    <button>X</button>
+                    <button class="delete_btn" type="button">X</button>
                 </li>
                 <li>
                     <p>방 청소하기</p>
-                    <button>X</button>
+                    <button class="delete_btn" type="button">X</button>
                 </li>
                 <li>
                     <p>아르바이트 갔다가 밖에서 장 보고와서 치과 가기</p>
-                    <button>X</button>
+                    <button class="delete_btn" type="button">X</button>
                 </li>
             </ul>
         </section>
-        <section class="list_done">
+        <section class="list">
             <h1>Done</h1>
             <ul>
                 <li>
                     <p>저녁 약속 8시까지</p>
-                    <button>X</button>
+                    <button class="delete_btn" type="button">X</button>
                 </li>
                 <li>
                     <p>가족 모임 참여하기</p>
-                    <button>X</button>
+                    <button class="delete_btn" type="button">X</button>
                 </li>
             </ul>
         </section>
