Fix: 홈페이지 로고 수정

--- a/shoppingList/index.html
+++ b/shoppingList/index.html
@@ -16,7 +16,7 @@
     <div class="header_menu">
         <div class="header_top">
             <header>
-                <p id="main_logo" class="">o</p>
+                <p id="main_logo" class="home_logo">🌱</p>
                 <h1>한서의 쇼핑몰</h1>
                 <p class="sideMenu_btn" >≡</p>
             </header>
