--- a/shoppingList/cart.html
+++ b/shoppingList/cart.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <p id="main_logo" class="">o</p>
+        <p id="main_logo" class="home_logo">🌱</p>
         <h1>한서의 쇼핑몰</h1>
         <p class="sideMenu_btn" >≡</p>
     </header>
