Feat: 구매 모달 구현

--- a/shoppingList/cart.html
+++ b/shoppingList/cart.html
@@ -23,7 +23,15 @@
             <li><p class="info">비고</p></li>
         </ul>
         <div class="ol_container">
-            
+        </div>
+        <div class="modal hidden">
+            <button class="back_btn">X</button>
+            <ul class="modal_items"></ul>
+            <button class="buy">구매 확정</button>
+        </div>
+        <div class="buttons">
+            <button class="goHome">홈으로</button>
+            <button class="purchase_btn" type="button">구매</button>
         </div>
         
     </section>
