Fix: 장바구니 기능 수정

--- a/shoppingList/cart.html
+++ b/shoppingList/cart.html
@@ -16,7 +16,7 @@
     </header>
     <section class="order_list">
         <ul class="list_title">
-            <li><input class = "check" type="checkbox" value=""></li>
+            <li><input class = "check" type="checkbox" value="" id="select-all"></li>
             <li><p class="info">상품정보</p></li>
             <li><p class="info">상품 금액</p></li>
             <li><p class="info">카테고리</p></li>
